--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,7 +1,22 @@
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Projeto Alexandria</a>
+      
+    </div>
+    <div class="collapse navbar-collapse">
+    	<ul class="nav navbar-nav">
+    		<li class="dropdown">
+    			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+    				Cadastros 
+    				<span class="caret"></span>
+    			</a>
+    			<ul class="dropdown-menu">
+    				<li><a href="educators">Educadores</a></li>
+    			</ul>
+    		</li>
+    	</ul>
+    	
     </div>
   </div>
 </nav>
