--- a/app/views/educators/index.html.erb
+++ b/app/views/educators/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Lista de Educadores</h1>
 
-<table>
+<table class="table table-striped table-bordered table-hover table-condensed">
   <thead>
     <tr>
       <th>Nome </th>
