voltando configuração de rota no menu navegação

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,7 +12,7 @@
     				<span class="caret"></span>
     			</a>
     			<ul class="dropdown-menu">
-    				<li><a href="educadores">Educadores</a></li>
+    				<li><a href="educadors">Educadores</a></li>
     			</ul>
     		</li>
     	</ul>
