--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,7 @@
 
     <h1>Cadastrar Usuário</h1>
 
-    <%= form_for(@user) do |f| %>
-      <%= f.text_field :first_name, :placeholder => "Nome" %>
-      <%= f.text_field :last_name, :placeholder => "Sobrenome" %>
+    <%= form_for @user do |f| %>
       <%= f.email_field :email, :placeholder => "E-mail" %>
       <%= f.password_field :password, :placeholder => "Senha" %>
       <%= f.submit "Criar Conta", class: "btn-submit" %>
